gray-theme/unauthenticated/gray-theme.css
body {margin: 8px; color: #393939; line-height:1.5em; text-align:left;}
p { margin-top:4px; }
table { border-width: 0px;
  empty-cells: hide;
  border-collapse: separate;
  margin:0;
}
table.formsection, table.ui_table, table.loginform {
  border-collapse: separate;
  *border-collapse: collapse;
  border: 1px solid #FFFFFF;
  width: 100%;
}
table.ui_table .ui_table {
  border: none;
}
img, a img { border:0; }
tr.row0 {background-color:#e8e8ea;}
tr.row1 {background-color:#f8f8fa;}
table.formsection thead, table.sortable thead, table.ui_table thead, table.loginform thead {
background-color:#d0e0fc;
border:0px;
text-align:left;
}
table.ui_table thead td {
  padding: 0 2px;
}
table.sortable tbody td {
  padding: 2px;
}
table.ui_table td * {
  line-height:1.5em;
}
table.ui_table td textarea {line-height:normal; font-family:monospace;}
table.ui_table td div.barchart * {
  margin: 0;
}
table.ui_table thead td * {
  vertical-align:middle;
  margin: 0;
  padding: 0 0 0 1px; 
}
table.ui_table dt, table.ui_table dd {
  padding: 0 2px;
}
table.ui_form_end_buttons td {
  padding: 6px 3px;
}
div.ui_form_end_buttons {
  padding: 6px 3px;
}
.ui_form_end_buttons input {
  padding: 2px;
}
table.ui_grid_table td { padding: 2px 4px; }
input {
  padding: 1px;
}
th, td {
	border: none;
}
table.formsection tbody, table.sortable tbody, table.ui_table tbody, table.loginform tbody {
background-color:#f5f5f5;
}
a:link, a:visited { color: #0b46ab;
  text-decoration: none;
}
a:hover, a:visited:hover { color: #0b46ab;
  text-decoration: none;
}
a.ui-hidden-table-title { color: #393939; }
title { color: #393939;
  font-family: sans-serif;
}
h1,h2,h3,h4,h5 { color: #393939;
}
/* pre { font-size: 77%; } */
#main { border-style: solid;
  border:1px solid #FFFFFF;
  margin:0;
  padding:0;
}
table#main td {
  padding: 4px;
}
tr.mainsel { background-color: #ddffbb; }
tr.mainhigh { background-color: #ffffbb; }
tr.mainhighsel { background-color: #bbffcc; }
.itemhidden { display: none; }
.itemshown { display:block; }
.barchart { padding: 1px;
  border: 1px solid #d9d9d9;
  white-space: nowrap;
  /*position:relative;*/
}
.ui_post_header{ font-size: 116%;
 text-align: center;
 padding: 4px;
}
.ui_subheading { font-size: 116%;
  font-weight: bold;
}
hr { border: 0;
  width: 90%;
  height: 1px;
  color: #D9D9D9;
  background-color: #D9D9D9;
}
table.wrapper, table.shrinkwrapper {
  background-color:#D9D9D9;
  border:1px solid #D9D9D9;
  border-collapse:collapse;
  empty-cells: hide;
  margin:0;
  padding:0;
}
table.wrapper table.wrapper, table.shrinkwrapper table.shrinkwrapper {
  border:none;
  background-color:#f5f5f5;
}
div.wrapper {
  border:1px solid #D9D9D9;
  background-color:#F5F5F5;
  padding:0;
  margin:0;
}
.tabSelected {
  background-color:#D0E0FC;
}
.tabUnselected {
  background-color:#D9D9D9;
}
.goArrow { margin-bottom: -4px; }

.ui_form_label{
  text-align:right;
  vertical-align:top;
}
.ui_form_pair td {padding:4px;}
.ui_form_pair td table.ui_radio_table tr td {padding:2px;}
.ui_form_pair td table tr td {padding:0px;}
.ui_radio_table tr td {padding:2px;}
.ui_buttons_table tr td {padding:4px;}
/* left menu */
.mode {
  left: auto;
  right: auto;
}
.linkwithicon {
  position: relative;
  white-space: nowrap;
  left: 2px;
  width: 16px;
  padding-top: 3px;
  padding-bottom: 3px;
}
.linkwithicon img, .mode img {
  margin-bottom: -2px;
}
.leftlink {
  position: relative;
  left: 4px;
  right: 4px;
  line-height: 1.5em;
}
.linkindented {
  border: none;
  position: relative;
  margin-right: 2px;
  margin-left: 20px;
  line-height: 1.5em;
}
.linkwithicon.inactive a,
.linkindented.inactive a {
  /* pointer-events: none; */
  filter: grayscale(1);
  opacity: .75;
}
.linkindented.inactive {
  white-space: pre;
}
.linkwithicon.inactive sub,
.linkindented.inactive sub {
  vertical-align: top;
}
.aftericon {
  display: inline;
}
.domainmenu {
  white-space: nowrap;
  position: relative;
  left: 4px;
  padding-top: 2px;
}
br[data-x-br] {
  content: "";
  margin: 2em;
  display: block;
  font-size: 42%;
}

.ui_help {
    margin: auto 0 auto 5px;
    font-size: 70%;
    cursor: help;
    color: #d0e0fb;
    background-color: #00000099;
    border-radius: 50%;
    padding: 1px 3px;
    vertical-align: super;
    opacity: .8;
}

[data-tooltip][aria-label] {
    position: relative;
}

[data-tooltip][aria-label]::after {
    content: "";
    pointer-events: none;
    width: 0;
    height: 0;
    position: absolute;
    border-color: black;
    border-width: 0;
    border-style: solid;
    opacity: 0;
    visibility: none;
    margin-bottom: 5px;
    border-top-width: 10px;
    border-right-width: 10px;
    border-right-color: transparent;
    border-left-width: 10px;
    border-left-color: transparent;
    bottom: 100%;
    right: 50%;
    transform: translateX(50%)
}

[data-tooltip][aria-label]::before {
    bottom: calc(15px + 100%);
    right: 50%;
    transform: translateX(50%);
    font-size: 11px;
    font-weight: normal;
    text-shadow: none;
    content: attr(aria-label);
    pointer-events: none;
    word-wrap: initial;
    word-break: break-all;
    max-width: 50vw;
    width: max-content;
    position: absolute;
    color: white;
    background: black;
    padding: 4px 8px;
    border-radius: 50px;
    opacity: 0;
    visibility: none;
    text-align: center;
}

[data-tooltip][aria-label]:hover::before,
[data-tooltip][aria-label]:hover::after {
    visibility: visible;
    opacity: 1;
    transition-duration: .5s
}

@media print {
    body > .header,
    body > .header ~ center,
    .ui_form ~ a,
    .ui_table a[href*=".cgi"],
    .ui_form .ui_link,
    .ui_form > center,
    .ui_form > [name],
    .ui_form > .wrapper,
    .ui_form > .wrapper ~ .shrinkwrapper,
    .ui_table > thead > tr > td:not(:first-child):last-child {
        display: none;
    }
    
    .ui_table > thead > tr > td > b {
        font-size: 1.33em;
    }

    .ui_table > thead >tr > td {
        border-bottom: 2px solid #D9D9D9;
        text-align: center;
        position: relative;
        padding: 10px;
    }

    body > .header ~ .ui_form[action*=".cgi"]:first-of-type {
        margin-top: -50px;
    }

    pre {
        white-space: pre-wrap;
    }

    a {
        word-break: break-word;
    }

    a[href]:after {
        content: none;
    }
}

form[action="config_save.cgi"] #sortableTable2 > thead > tr > td {
    text-align: center;
}

.leftmenu details > summary {
  cursor: pointer;
}
.leftmenu details > summary::marker {
  color: #bbb;
  font-size: 120%;
}
.leftmenu details > summary  span {
  padding-left: 2px;
  white-space: nowrap;
  color: #000;
}

.leftmenu details {
  padding-left: 6px;
  padding-bottom: 4px;
}

.leftmenu details .linkindented {
  margin-left: 16px;
}

.ui_alert_box > tbody > tr[bgcolor="#DFF0D8"] > td {
  border: 1px solid #7cda1099;
}
.ui_alert_box > tbody > tr[bgcolor="#D9EDF7"] > td {
    border: 1px solid #108eda5c;
}
.ui_alert_box > tbody > tr[bgcolor="#FCF8E3"] > td {
  border: 1px solid #dac51099;
}
.ui_alert_box > tbody > tr[bgcolor="#F2DEDE"] > td {
  border: 1px solid #da10bb57;
}

